Bug 582783 - Move windows.h include and undef LoadImage to gfxWindowsSurface.h. r=joe